Wireframe - fixing box model parameters to align containers v1.1

--- a/Assets/css/test.css
+++ b/Assets/css/test.css
@@ -5,6 +5,12 @@ body {
   line-height: 1.5;
   font-size: 16px;
 }
+main {
+  display: flex;
+  flex: 0 1 0;
+  max-width: 1200px;
+  */margin: 2% auto;*/
+}
 
 header {
   display: flex;
@@ -48,44 +54,32 @@ nav a {
   text-decoration: none;
 }
 
-main {
-    display: flex;
-    flex: 0 1 0;
-    max-width: 1200px;
-    margin: 2% auto;
-  }
 
-section {
-  *flex: 0 1 0;
+
+/*section {
   padding-right: 5%;
-}
+}*/
 
 .element_title {
   /*display: flex;*/
   /* Align the child elements to the top of the parent */
-  align-items: left;
   width: 20%;
   margin: 1% auto;
   background-color: lightgrey;
-  border: 15px solid green;
-  padding: 50px;
-  margin: 20px;
+  border-right: 5px solid darkblue;
+  padding-right: 10px;
+  padding-left: 100px;
+  text-align: right;
+  font-size: 200%
 }
 
 .element_content {
   /*display: flex;*/
   /* Align the child elements to the top of the parent */
-  align-items: left;
   width: 80%;
-  margin: 1% auto;
+ /*margin: 1% auto;*/
   background-color: lightgrey;
-  border: 15px solid green;
   padding: 50px;
-  margin: 20px;
-}
-
-article {
-  border-bottom: 1px solid #d8a47f;
 }
 
 /* Add a margin to the top and bottom of the paragraphs */
